lab1/Test/L1-A-9-2.cmm
float Ap5ZhR6oQqkij2 ( ) {
  int [ 313450033 ] , nVOS6gcpxA = CYrpkZEMY0V9sn 
    ;
  if ( P0e9u04iSRQ6Etdm )   ssR = && ZATZyYzc3O3U7m 
    == h5RiPXhCWNOh - byMKIW8Or / ENYbI799XgPcxNutXV ( 
    h274q0 , HklCAKzX9 || f <= N6CfqvmIt1qUeiWhBU / - 
    ! mnC4wqhwSUgeIwUxUskW [ bS6L != it ( P8JEbdXB = zqsIQ9ezRXK10_kmTmOe 
    >= QvEJ + ( rlAnudvVqBNwEvWemVA < JRqWbf63NuWz4L > 
    389850246.548453746 . Fj ) || - - 1703664929 ) ] . 
    aArCJAej2VkE ) + wNClf1lz * ! - hFAbwbrZeCV5VhD ( 
    ) ;

}
struct {
}kT5whBc0HaSjwW23Oy1j 
;
struct N ;
int ;
int ;
struct iws tnLppaF6w ( struct pJf_v4bSVO VjpZ4TYRdVs 
  int mMPXwIwSm8e_Jrk ) {
  int KUYLsL8orp14jtbcn ;
}
int bc12IY57CE09cg ( {
}
struct f2N0x m6VpvmgcMFNRQZWFWmn , w8_64GhKahL 


int ;
struct Wop {
};
int ;
int ;
int ;
int ;
int RrQOXp8nlKbxUiUM52 ( ) {
}
int IIQvssc ( ) {
}
int ;
int Mkl6 ( ) {
  Cr ;
  if ( sO )   while ( KNIiDGBp9 )   ObQJh3aoH_zz7yRKAhY 
    ;

else   if ( k8y2vFeWsib02KqBxHl )   if ( ndnz )   return 
    lUHyLgOe_ ;
else {
  }


}
